--- a/style.css
+++ b/style.css
@@ -162,11 +162,11 @@
     width: 10rem;
     padding: 15px;
     margin: 1rem;
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(11, 66, 81, 0.35);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(6.9px);
-    -webkit-backdrop-filter: blur(6.9px);  
+    backdrop-filter: blur(7.2px);
+    -webkit-backdrop-filter: blur(7.2px);
   }
 
   .proyectos{
@@ -180,7 +180,7 @@
     align-items: center; 
   }
 
-  .proyectos h2{
+  .p_title{
     padding-bottom: 1rem;
   }
 
@@ -203,6 +203,7 @@
 
   .contacto{
     width: 100%;   
+    padding-bottom: 1rem;
     background-image: linear-gradient(180deg, rgba(11, 66, 81, 0.836) 0%, rgba(242, 199, 100, 0.733) 100%), url(./assets/imagenes/back.jpg);
     background-position: bottom;
     display: flex;
@@ -261,6 +262,7 @@
   .contacto_form{
     width: 80%;
     margin-top: 2rem;
+    padding-bottom: 1rem;
     background: rgba(11, 66, 81, 0.59);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -285,8 +287,15 @@
   }
 
   input{
+    width: 80%;
     border: 1px #f2c864 solid;
     border-radius: 5px;  
+  }
+
+  .form textarea {
+    width: 80%;
+    border: 1px #f2c864 solid;
+    border-radius: 5px;
   }
 
   .form_enviar{
@@ -320,6 +329,105 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+
+  .title{
+    width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  
+  .title_text{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;    
+  }
+
+  .title_text h1{
+    font-size: 4rem;
+    font-weight: bold;
+  }
+
+  .title_text h2{
+    font-size: 3rem;
+  }
+
+  .title_text{
+    font-size: 2rem;
+  }
+
+  .title_img{
+    width: 50%;
+    padding-top: 2rem;
+  }
+
+  .title_t_i{
+    width: 100%;
+    display: flex;
+    gap: 1rem;
+  }
+
+  .soy{
+    width: 100%;
+  }
+
+  .soy p{
+    text-align: center;
+  }
+
+  .c_title{
+    font-size: 3rem;
+  }
+
+  .c_gallery{
+    padding: 2rem;
+  }
+
+  .c_gallery img{
+    width: 8rem;
+  }
+
+  .p_title{
+    padding: 2rem;
+    font-size: 3rem;
+  }
+
+  .proyectos_gallery{
+    padding-bottom: 2rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+  }
+
+  .proyectos_gallery img{
+    width: 12rem;
+  }
+
+  .contacto h2{
+    font-size: 3rem;
+  }
+
+  .contacto_redes{
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  input{
+    height: 2rem;
+  } 
+
+  .pie_menu li a{
+    font-size: 20px;
+  }
+
+  .pie_creador{
+    font-size: 25px;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   .checkbtn, .fi-br-menu-burger, .fi-br-cross {
     display: none;
@@ -339,5 +447,51 @@
   }
   .nav_menu li a:hover {
     background-color: #f8816f;
+  }
+
+  
+
+  .title_img img{
+    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+  }
+
+  .c_gallery img{
+    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+  }
+
+  .title_text h1{
+    font-size: 3rem;
+  }
+
+  .soy h3{
+    font-size: 2.5rem;
+  }
+
+  .soy p{
+    font-size: 25px;
+  }
+
+  .proyectos_gallery img{
+    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+  }
+
+  .contacto_text_p{
+    font-size: 25px;
+  }
+
+  .red p{
+    font-size: 25px;
+  }
+
+  .red img{
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .contacto_form label{
+    font-size: 25px;
   }
 }
